--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
+#FILES
 *.vpp.*
+HELP.md
+!.mvn/wrapper/maven-wrapper.jar
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+#FOLDERS
+target/
+!**/src/main/**/target/
+!**/src/test/**/target/
+!**/.metadata/
