--- a/classUT-repository/src/main/resources/application.properties
+++ b/classUT-repository/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/classut_repo?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Password1
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto = update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -21,4 +21,4 @@ spring.servelt.multipart.max-file-size = 200MB
 spring.servlet.multipart.max-request-size = 215MB
 
 #FILE STORAGE PROPERTIES
-file.upload-dir = /d/Universita/SAD/ClassUT
+file.upload-dir = D:\Esami\SAD\minimised_classes_2016\subjects\refactored
