--- a/classUT-repository/src/main/resources/application.properties
+++ b/classUT-repository/src/main/resources/application.properties
@@ -21,4 +21,5 @@ spring.servelt.multipart.max-file-size = 200MB
 spring.servlet.multipart.max-request-size = 215MB
 
 #FILE STORAGE PROPERTIES
-file.upload-dir = D:\\Universita\\SAD\\ClassUT\\
+#file.upload-dir = D:\\Universita\\SAD\\ClassUT\\
+file.upload-dir = //app//ClassUT//
